test/TABULAR/sweeps/run_19/logs/error.txt
Traceback (most recent call last):
  File "C:\Users\shockers\Desktop\topology-and-robustness-in-DNNs\runners\runner_lib.py", line 813, in run_one_config
    res = run_pipeline_from_config(
        config_path=config_path,
    ...<7 lines>...
        run_ood=None,  # follow cfg.ood.enabled unless user changes YAML
    )
  File "C:\Users\shockers\Desktop\topology-and-robustness-in-DNNs\runners\runner_lib.py", line 347, in run_pipeline_from_config
    return run_pipeline(
        dataset_name=str(dataset_name),
    ...<4 lines>...
        run_ood=run_ood,
    )
  File "C:\Users\shockers\Desktop\topology-and-robustness-in-DNNs\src\api.py", line 928, in run_pipeline
    "severity": float(ood_severity),
                ~~~~~^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'NoneType'
